hurr durr proofreading

--- a/report/bib/bibliography.bib
+++ b/report/bib/bibliography.bib
@@ -99,3 +99,11 @@ title = {AsyncTask Documentation},
 year = {2013},
 url = {http://developer.android.com/reference/android/os/AsyncTask.html}
 }
+
+@misc{
+hundt11,
+author = {Robert Hundt},
+title = {Loop Recognition in C++/Java/Go/Scala},
+year = {2011},
+url = {https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf}
+}
