--- a/report/tex/analysis/background.tex
+++ b/report/tex/analysis/background.tex
@@ -1,5 +1,5 @@
 \section{Background}
-The objective for this semester's project was to continue the work on the Giraf project that has been handed over by last year's bachelor students. 
+The objective for this semester's project was to continue the work on the \ac{giraf} project that has been handed over by last year's bachelor students. 
 
 As mentioned in the \todo{insert reference to common chapter}common chapter the Giraf project is \todo{make sure that the common chapter includes a clear description}broken up into several subprojects. 
 
