--- a/report/tex/analysis/last_year.tex
+++ b/report/tex/analysis/last_year.tex
@@ -1,8 +1,6 @@
 \section{2012 Material}
-The objective for the project was to continue the work on the Giraf project that was handed over by the 2012 bachelor students. 
+The objective for the project was to continue the work on the \ac{giraf} system that was handed over by the 2012 bachelor students. 
 
-Initially the task was to enable synchronization between the central database and the local databases on the individual tablets. Unfortunately the latest version of the 2012 database project seemed to be missing, because the only version that was available did not compile. And as mentioned in the common chapter \todo{ref common chapter} the documentation on install instructions were lacking to say the least. So the only thing that was reusable from the 2012 semester was the database schema which we could use as a mock-up. This meant that our workload had increased substantially as we now had to implement our own central and local database as well as handle the synchronization between the two.
+Initially the task was to enable synchronization between the central database and the local databases on the individual tablets. Unfortunately the latest version of the 2012 central database project seemed to be missing, because the only version that was available did not compile. And as mentioned in \autoref{cha:common} the documentation on install instructions were lacking to say the least. So the only thing that was reusable from the 2012 semester was the database schema which could be used as a mock-up. This meant that the workload had increased substantially as the group now had to implement a central and local database as well as handle the synchronization between the two.
 
-%There were of course some positives to take from the initial set back. We now had the chance to model both databases to our liking, giving us full control. We started by reevaluating the database schema, using the 2012 group's schema as a mock-up and editing where necessary. This saved us some time as a lot of the schema could be reused.
-
-The 2012 server was written in Java and the argumentation was that the students had a lot of experience using Java. We on the other hand, have had introductory courses in C and C\# and have little to no experience using Java. Another argument was that a server has to be able to handle a large amount of requests. The fact that we are writing a server side application and the fact that C performs better than Java, we feel more comfortable writing our server in C instead of Java.
+The 2012 server was written in Java and the argumentation was that the students had a lot of experience using Java. This group on the other hand, has had introductory courses in C and C\# and has little to no experience using Java. Another argument was that a server has to be able to handle a large amount of requests. Given this fact, the group felt confident that C++, a language based on C, would be excellent for the development, considering that C++ performs better than Java.\cite{hundt11}
