--- a/report/tex/process_progress/product_backlog.tex
+++ b/report/tex/process_progress/product_backlog.tex
@@ -1,31 +1,22 @@
 \section{Product Backlog}
-The tasks were prioritized and added to sprint backlogs and as work progressed new task were added to the backlog and tasks that were completed got a check mark. The following table contains the product backlog for the project.
+The tasks were prioritized and added to sprint backlogs and as work progressed new task were added to the backlog and tasks that were completed got a check mark. Due to the fact that estimation in software development is often very difficult, the estimates were done in numbers representing the expected effort required to complete them. The priority goes from 1-10, with 1 being highest priority. The following table contains the product backlog for the project.
 
 \begin{center}
 	\begin{tabular}{| c | p{4cm} | c | c | l |}
 	\hline
 	\textbf{ID} 	& \textbf{Name} 										& \textbf{Priority} 	& \textbf{Estimated time} 	& \textbf{Status} 			\\ 	\hline
-	1 	& Connection Library 						& 4 		& 2 				& Finished. 		\\	\hline
-	2 	& Database Library 							& 3 		& 3 				& Finished. 		\\	\hline
-	3 	& Authentication 							& 6 		& 3 				& In progress. 		\\ 	\hline
+	1 	& Connection Library 						& 3 		& 5 				& Finished. 		\\	\hline
+	2 	& Database Library 							& 4 		& 3 				& Finished. 		\\	\hline
+	3 	& Authentication 							& 2 		& 5 				& In progress. 		\\ 	\hline
 	4 	& Database schema 							& 1 		& 2 				& Finished. 		\\	\hline
 	5 	& Design database API 						& 2 		& 5 				& Finished. 		\\	\hline
-	6 	& Connection between us and the Admin group & 4 		& 5 				& In progress. 		\\ 	\hline
-	7 	& JSON encoder/decoder 						& 3 		& 2 				& Finished. 		\\	\hline
-	8 	& OasisLib dummy							& 5 		& 3 				& Finished. 		\\	\hline
-	9 	& API read-calls 							& 1 		& 8 				& Finished. 		\\ 	\hline
-	10 	& API create-calls 							& 1 		& 8 				& Finished. 		\\	\hline
-	11 	& API update-calls 							& 1 		& 8 				& Finished. 		\\	\hline
-	12	& API delete-calls							& 1 		& 8 				& Finished. 		\\ 	\hline
-	13 	& Establish SQLite database 				& 3 		& 3 				& Finished. 		\\	\hline
-	14	& Connect to MySQL database 				& 3 		& 3 				& Finished. 		\\	\hline
-	15	& One-way synchronization					& 4 		& 5 				& Finished. 		\\ 	\hline
-	16	& Two-way synchronization					& 3 		& 8 				& Finished. 		\\	\hline
-	17	& Write report								& 2 		& 8 				& In progress. 		\\	\hline
-	18	& Proofread report 							& 1 		& 8 				& In progress. 		\\ 	\hline
-	19	& Install instructions 						& 2 		& 2 				& Finished. 		\\	\hline
-	20	& Problem statement							& 8 		& 1 				& Finished. 		\\	\hline
-	21	& Write	design guidelines (common chapter)	& 7 		& 1 				& Finished. 		\\ 	\hline
-	22	& Write	project description (common chapter)& 7 		& 1 				& Finished. 		\\ 	\hline
+	6 	& JSON encoder/decoder 						& 2 		& 2 				& Finished. 		\\	\hline
+	7 	& OasisLib dummy							& 5 		& 3 				& Finished. 		\\	\hline
+	8 	& Implement API calls						& 1 		& 21 				& Known bugs. 		\\ 		\hline
+	9 	& Establish SQLite database 				& 2 		& 3 				& Finished. 		\\	\hline
+	10	& Implement synchronization					& 3 		& 8 				& Finished. 		\\	\hline
+	11	& Write report								& 1 		& 13 				& Finished. 		\\	\hline
+	12	& Proofread report 							& 4 		& 8 				& Finished. 		\\ 	\hline
+	13	& Install instructions 						& 4 		& 2 				& Finished. 		\\	\hline
 	\end{tabular}
 \end{center}
