fixed some of the suggestions by Katja

--- a/report/bib/bibliography.bib
+++ b/report/bib/bibliography.bib
@@ -76,3 +76,10 @@ year = {2004},
 isbn = {0-13-111155-8}
 }
 
+@misc{
+fromdual,
+author = {FromDual},
+title = {MATERIALIZED VIEWS WITH MYSQL},
+year = {2013},
+url = {http://www.fromdual.com/mysql-materialized-views}
+}
