--- a/report/tex/manual/install_instructions.tex
+++ b/report/tex/manual/install_instructions.tex
@@ -1,7 +1,11 @@
 \section{Installation Instructions}
-This should be installed on a machine running a Linux OS.
 
-\subsection{Prerequisites for the installation}
+\subsection{Hardcoded Information}
+It should be noted, that the IP, port and name of the database is hardcoded into the database in the constructor for the \ac{api} class in the serverside code. In the OasisLib dummy the IP and port of the server is hardcoded.
+
+\subsection{Prerequisites for the serverapp installation}
+The system running the serverside application is expected to run on a Linux system with MySQL installed.
+
 \begin{itemize}
 \item MySQL Connector/C
 \begin{itemize}
@@ -43,4 +47,4 @@ The report content is freely available, but publication (with source), only afte
 
 GIRAF Database's source code is released under the GPLv3 \cite{GNUlicense} open source license. This means that you are free to inspect the source code at any time or contribute to the project yourself.
 
-\subsection*{Online Availability} The installation guide can also be found online \cite{install}.
+\subsection*{Online Availability} The installation guide and the latest version of the code can also be found online \cite{install}.
