--- a/report/tex/test/unit_test.tex
+++ b/report/tex/test/unit_test.tex
@@ -5,3 +5,6 @@ The unit tests for the modules test that everything gets initialized properly, a
 
 Furthermore the unit tests, specifically those of the API module, have been the basis of the integration tests of the API design. All the functionality is tested via unit tests to ensure that they conform to the design.
 
+All in all, the group wrote 3 test suites, one for each module, containing 11 test cases with 110 tests. 
+
+The Java implementations were not tested due to time constraints that did not allow the group to acquaint themselves with another unit testing framework. They were however tested in implementation, and given correct input they provide the expected functionality.
